2006-08-04  Mike Kelly  <pioto@pioto.org>

	* doc/auth_modules.txt: Add documentation of the auth module format.

2006-08-03  Mike Kelly  <pioto@pioto.org>

	* tools/get_autoconf_macros.sed: _'s are legal in variable names, too.

	* tools/subst.bash: Make the seds a little less harsh. Figured the
	only real way to get this stuff right is to source the confvars file
	several times in a row... But this seems bad...

2006-08-03  Mike Kelly  <pioto@pioto.org>

	* tools/get_autoconf_macros.sed, tools/subst.bash: Add a script,
	subst.bash, which will, given a file with @foo@ style autoconf
	substition markers, replace them. The difference between this and just
	using ./configure to do the job is that it'll fully evaluate any shell
	variables before substituting them, removing the need to do things
	like prefix=@prefix@ before the variable you actually care about.

2006-08-02  Mike Kelly  <pioto@pioto.org>

	* doc/API.txt: Clean up the API spec some more.

2006-08-01  Mike Kelly  <pioto@pioto.org>

	* (Everything): Begin a big 'ol rewrite of stuff, putting most code
	inside functions. This allows for variables to be kept out of the
	global scope, and also allows for easy, automatic syntax checks. Added
	some basic tests to Makefiles.

2006-07-31  Mike Kelly  <pioto@pioto.org>

	* bash/add.bash.in, bash/install_fail.bash.in: We shouldn't fail if
	ENEWUSERS or ENEWGROUPS are empty.

	* Makefile.am: Put a .keep file in the dbdirs, so they always exist
	properly.

2006-07-31  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.3.1

	* Makefile.am: Add doc to EXTRA_DIST, so we actually distribute our
	documentation.

2006-07-31  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.3.0

2006-07-31  Mike Kelly  <pioto@pioto.org>

	* (Everything): Switch everything to explicitly use bash. Rename all
	scripts from .sh to .bash, use #!/bin/bash, etc.

2006-07-31  Mike Kelly  <pioto@pioto.org>

	* eselect/users.eselect.in: Fix some load_config lines, remove an
	unnecessary one.
